--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -12,5 +14,12 @@
   "dependencies": {
     "nuxt": "^3.12.3",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/eslint": "^0.3.13",
+    "@stylistic/eslint-plugin": "^2.3.0",
+    "eslint": "^9.7.0",
+    "typescript": "^5.5.3",
+    "vue-tsc": "^2.0.26"
   }
 }
