--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@nuxt/content": "^2.13.1",
     "nuxt": "^3.12.3",
     "vue": "latest",
     "vuetify-nuxt-module": "^0.15.2"
