chore: update setting

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -73,7 +73,8 @@
         "dbaeumer.vscode-eslint",
         "Vue.volar",
         "heaths.vscode-guid",
-        "oven.bun-vscode"
+        "oven.bun-vscode",
+        "Nuxt.mdc"
       ]
       // cSpell: enable
     }
