--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -6,11 +6,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 WORKDIR /app
 
-COPY package.json ./
-COPY bun.lockb ./
 COPY . ./
 
-RUN bun install
-
-CMD ["bun", "run", "dev", "-o", "--host", "0.0.0.0"]
-
+CMD ["/bin/sh", "-c", "bun install && bun run dev -o --host 0.0.0.0"]
