--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@nuxt/content": "^2.13.1",
+    "mdi": "^2.2.43",
     "nuxt": "^3.12.3",
-    "vue": "latest",
-    "vuetify-nuxt-module": "^0.15.2"
+    "vue": "latest"
   },
   "devDependencies": {
     "@nuxt/eslint": "^0.3.13",
     "@stylistic/eslint-plugin": "^2.3.0",
     "eslint": "^9.7.0",
+    "sass": "^1.77.8",
     "typescript": "^5.5.3",
     "vite-plugin-vuetify": "^2.0.3",
     "vue-tsc": "^2.0.26",
