--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
-    "@nuxt/content": "^2.13.1",
-    "mdi": "^2.2.43",
-    "nuxt": "^3.12.3",
+    "@nuxt/content": "^2.13.2",
+    "nuxt": "^3.12.4",
     "vue": "latest"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^0.3.13",
-    "@stylistic/eslint-plugin": "^2.3.0",
-    "eslint": "^9.7.0",
+    "@nuxt/eslint": "^0.4.0",
+    "@nuxt/types": "^2.18.1",
+    "@nuxt/typescript-build": "^3.0.2",
+    "@stylistic/eslint-plugin": "^2.6.1",
+    "eslint": "^9.8.0",
     "sass": "^1.77.8",
-    "typescript": "^5.5.3",
+    "typescript": "^5.5.4",
+    "vite-plugin-eslint2": "^4.4.0",
     "vite-plugin-vuetify": "^2.0.3",
-    "vue-tsc": "^2.0.26",
-    "vuetify": "^3.6.13"
+    "vue-tsc": "^2.0.29",
+    "vuetify": "^3.6.14"
   }
 }
